Bug 421509 - Kdevelop crashes after has been launched (max a couple of minutes) (PHP project sessione)
Summary: Kdevelop crashes after has been launched (max a couple of minutes) (PHP proj...
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.5.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2020-05-14 12:37 UTC by Alessandro Briosi
Modified: 2020-06-02 16:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (72.25 KB, patch)
2020-05-14 12:37 UTC, Alessandro Briosi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alessandro Briosi 2020-05-14 12:37:24 UTC
Application: kdevelop (5.5.0)

Qt Version: 5.12.8
Frameworks Version: 5.68.0
Operating System: Linux 5.4.0-29-generic x86_64
Windowing system: X11
Distribution: Ubuntu 20.04 LTS

-- Information about the crash:
- What I was doing when the application crashed:
Opened the application.
Session is a php project and the background parser starts indexing.

After some time it crashes.
Already tried cleaning up cache.

It started after upgrade from Kubutnu 19.10 to 20.04.

The crash can be reproduced every time.

-- Backtrace (Reduced):
#6  0x00007f33b2e365e4 in KDevelop::AbstractType::modifiers() const () from /lib/x86_64-linux-gnu/libKDevPlatformLanguage.so.55
#7  0x00007f33859fff36 in Php::DeclarationBuilder::visitClassConstantDeclaration(Php::ClassConstantDeclarationAst*) () from /lib/x86_64-linux-gnu/libkdevphpduchain.so
#8  0x00007f338599d65e in Php::DefaultVisitor::visitClassStatement(Php::ClassStatementAst*) () from /lib/x86_64-linux-gnu/libkdevphpparser.so
#9  0x00007f3385a111bb in Php::ContextBuilder::visitClassStatement(Php::ClassStatementAst*) () from /lib/x86_64-linux-gnu/libkdevphpduchain.so
#10 0x00007f3385a1c812 in Php::TypeBuilder::visitClassStatement(Php::ClassStatementAst*) () from /lib/x86_64-linux-gnu/libkdevphpduchain.so


The reporter indicates this bug may be a duplicate of or related to bug 417659.

Possible duplicates by query: bug 419777, bug 417659, bug 374013, bug 325361, bug 310097.

Reported using DrKonqi
Comment 1 Alessandro Briosi 2020-05-14 12:37:26 UTC
Created attachment 128449 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Alessandro Briosi 2020-05-14 12:51:50 UTC
Disabled Backgroud Parser and it seems to fix for now.
Will report back in some time if it happens again.
Comment 3 Milian Wolff 2020-05-14 14:24:13 UTC
Git commit 5753d80c89217bda3d4865a8d4ca6fa29a7b6ee3 by Milian Wolff.
Committed on 14/05/2020 at 14:22.
Pushed by mwolff into branch '5.5'.

Check type before accessing it

M  +3    -3    duchain/builders/declarationbuilder.cpp

https://invent.kde.org/kde/kdev-php/commit/5753d80c89217bda3d4865a8d4ca6fa29a7b6ee3
Comment 4 Alessandro Briosi 2020-05-18 07:55:32 UTC
Disabling background parser does not fix the problem.
I see a commit has been done, if it fixes the problem it would be nice to have a bug fix release soon.

Thank you
Comment 5 Anon 2020-05-19 06:13:48 UTC
(In reply to Alessandro Briosi from comment #4)
> Disabling background parser does not fix the problem.
> I see a commit has been done, if it fixes the problem it would be nice to
> have a bug fix release soon.
> 
> Thank you

+1
Comment 6 Anon 2020-06-02 16:37:36 UTC
Solved for me in version 5.5.2