Check type before accessing it

BUG: 421509